--- a/quadro de desenho/index.html
+++ b/quadro de desenho/index.html
@@ -23,7 +23,7 @@
 
     <button class="clear">Limpar Quadro</button>
 
-    <footer>Criado pel Giovani</footer>
+    <footer>Criado pelo Giovani</footer>
 
     <script src="script.js"></script>
 </body>
